--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Rock+Salt|Permanent+Marker' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="js/script.js"></script>
   <title>Word Puzzle</title>
@@ -14,7 +15,7 @@
       <label for="form1"><h1>Enter your sentence here.</h1></label>
       <input id="form1" type="text" class="form-control">
       <div class="button">
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" id="button" class="btn btn-success">Submit</button>
       </div>
     </form>
 
